# Haxball_Genetic_Agent

./: .gitignore  agent.py  agent_vs_bot.py  ball.py  bot.py  config.py  entity.py  goal.py  player.py  pyproject.toml  quadra.py  redeneural.py  sidebar.py  train.py  train_agent.py  train_agent_robust.py  train_agent_segregated.py  training_history.json
models/: best_AUTO_L_GEN20_2025-12-15_08-58-55.pkl  best_AUTO_R_GEN20_2025-12-15_08-58-55.pkl  best_LEFT_2025-12-12_10-34-39.pkl  best_LEFT_ROBUST_2025-12-15_07-17-31.pkl  best_RIGHT_2025-12-12_10-34-39.pkl  best_model_2025-12-11_21-33-33.pkl  best_model_2025-12-12_00-14-19.pkl  best_model_2025-12-12_05-52-24.pkl  best_model_2025-12-12_06-08-18.pkl  best_model_2025-12-12_06-15-49.pkl  best_model_2025-12-12_06-20-53.pkl  best_model_2025-12-12_06-26-40.pkl  best_model_2025-12-12_08-25-33.pkl
models/Old Train/: best_LEFT_ROBUST_2025-12-14_06-40-41.pkl  best_LEFT_ROBUST_2025-12-14_06-40-44.pkl  best_LEFT_ROBUST_2025-12-14_06-41-03.pkl  best_LEFT_ROBUST_2025-12-14_07-19-12.pkl
