[project]
name = "haxball-genetic-agent"
version = "0.1.0"
description = "Haxball game with genetic algorithm agents"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ball", "bot", "config", "entity", "player", "quadra", "train", "goal"]

[tool.uv]
# Removed unrecognized fields to avoid pip/uv parsing errors.
# If you need uv-specific config, put it in a separate uv config file.
